--- a/VasyanGames/VasyanGames/App.config
+++ b/VasyanGames/VasyanGames/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Vasyan" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=VasyanGames.Vasyan;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="VasyanString" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=VasyanGames;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
