--- a/VasyanGames/VasyanGames/VasyanGames.csproj
+++ b/VasyanGames/VasyanGames/VasyanGames.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\Producer.cs" />
     <Compile Include="VasyanGames.cs" />
+    <Page Include="DataTemplateGames.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
